# taal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PROJECT.md  README.md  README_BOOTSTRAP.md  REORG_NOTE.md  STATUS.md  analysis_options.yaml  pubspec.yaml
android/: .gitignore
android/app/src/main/cpp/: CMakeLists.txt  metronome_audio_engine.cpp
docs/: TAAL_PRD_v1.9.docx  agent-prompt-examples.md  agent-prompt-template.md  coding-model.md  prd.md
lib/: main.dart
plans/: phase-0.md  phase-1.5.md  phase-1.md  phase-2.md  phase-3.md
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: device_profiles.rs  mod.rs  practice_attempts.rs  practice_habits.rs  practice_runtime.rs  profiles.rs  settings.rs  simple.rs
rust/src/content/: compatibility.rs  compile.rs  error.rs  layout.rs  lesson.rs  mod.rs  scoring.rs
rust/src/midi/: mapping.rs  mod.rs
rust/src/runtime/: mod.rs  practice_runtime.rs  session.rs
rust/src/scoring/: mod.rs
rust/src/storage/: device_profiles.rs  mod.rs  practice_attempts.rs  profiles.rs
rust/src/time/: mod.rs
rust/tests/: bundled_layouts.rs  content_validation.rs  device_profile_persistence.rs  layout_compatibility.rs  lesson_compile.rs  local_profiles.rs  midi_mapping.rs  practice_attempt_persistence.rs  practice_runtime_bridge.rs  runtime_session.rs  scoring_behavior.rs  settings_persistence.rs  starter_lessons.rs  time_conversion.rs
rust_builder/: pubspec.yaml
test/: animation_framework_test.dart  app_shell_test.dart  bridge_test.dart  calibration_session_test.dart  drum_kit_test.dart  (+23 more)
(+106 files in other folders)
